please tell me it wordek

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 </head>	
 <body>
 	
-	<h1>Please tell me the post-commit hook worked</h1>
+	<h1>Please.</h1>
+	<p>Tell me the post-commit hook worked.</p>
 	
 </body>
 </html>
