--- a/index.html
+++ b/index.html
@@ -25,11 +25,8 @@
 </head>	
 <body>
 	
-	<h1>Please.</h1>
-	<p>Tell me the post-commit hook worked.</p>
-
-	<h2>It worked.</h2>
-	<p>Yayy!</p>
+	<img src="http://bukk.it/bean.gif" />
+	<h1>So, I got post-commit hooks working now.</h1>
 	
 </body>
 </html>
