one more test :)

--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
 <body>
 	
 	<img src="http://bukk.it/bean.gif" />
-	<h1>So, I got post-commit hooks working now.</h1>
+	<h2>So, I got post-commit hooks working now.</h2>
+
+	<img src="http://bukk.it/cabinboogie.gif" />
+	<h1>This is absolutely fantabulous.</h1>
 	
 </body>
 </html>
