--- a/index.html
+++ b/index.html
@@ -21,15 +21,23 @@
 		img { max-width: 100% }
 		html { font-size: 100%; color: #444 }
 		body { padding: 5%; font: 1em/1.6 sans-serif }
+		div { margin-bottom: 2em }
 	</style>
 </head>	
 <body>
 	
-	<img src="http://bukk.it/bean.gif" />
-	<h2>So, I got post-commit hooks working now.</h2>
-
-	<img src="http://bukk.it/cabinboogie.gif" />
-	<h1>This is absolutely fantabulous.</h1>
+	<div>
+		<img src="http://bukk.it/bean.gif" />
+		<h2>So, I got post-commit hooks working now.</h2>
+	</div>
+	<div>
+		<img src="http://bukk.it/cabinboogie.gif" />
+		<h2>This is absolutely fantabulous.</h2>
+	</div>
+	<div>
+		<img src="http://bukk.it/bushflex.jpg" />
+		<h2>I mean, I make some chages to my site. Commit my updates to Git Hub, and magically my website is updated. Wow.</h2>
+	</div>
 	
 </body>
 </html>
