--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
 </head>	
 <body>
 	
+	<h1>I'm on top of the world</h1>
+
 	<div>
 		<img src="http://bukk.it/bean.gif" />
 		<h2>So, I got post-commit hooks working now.</h2>
