--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 		a img { border: none }
 		img { max-width: 100% }
 		html { font-size: 100%; color: #444 }
-		body { padding: 5%; font: 1em/1.6 sans-serif }
+		body { padding: 5%; font: 1em/1.6 sans-serif; max-width: 600px; margin: auto }
+		h1 { margin-bottom: 1em }
 		div { margin-bottom: 2em }
 	</style>
 </head>	
