added new image

--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
 		<img src="http://bukk.it/bushflex.jpg" />
 		<h2>I mean, I make some chages to my site. Commit my updates to Git Hub, and magically my website is updated. Wow.</h2>
 	</div>
+	<div>
+		<img src="http://bukk.it/skygator.gif" />
+		<h2>This is how fun git is.</h2>
+	</div>
 	
 </body>
 </html>
