--- a/index.html
+++ b/index.html
@@ -45,6 +45,10 @@
 		<img src="http://bukk.it/skygator.gif" />
 		<h2>This is how fun git is.</h2>
 	</div>
+	<div>
+		<img src="http://bukk.it/heeheeheehee.gif" />
+		<h2>Lets go running</h2>
+	</div>
 	
 </body>
 </html>
