--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@
 		<img src="http://bukk.it/heeheeheehee.gif" />
 		<h2>Lets go running</h2>
 	</div>
+	<div>
+		<img src="http://bukk.it/business.gif" />
+		<h2>Git like a pro like this guy.</h2>
+	</div>
 	
 </body>
 </html>
