--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -1,6 +1,27 @@
 ---
 layout: default
-title: Portfolio
+title: portfolio
 ---
 
-<h1>Portfolio</h1>
+<div class="page-header">
+  <h1 class="page-header-title"><i class="icon-eye"></i> Portfolio</h1>
+</div>
+
+<div class="container-wide">
+
+  <div class="portfolio-items">
+    {% for post in site.categories.portfolio %}
+
+    <figure class="potfolio-item">
+      <a href="{{ post.url }}">
+        <img src="{{ post.image }}" alt="{{ post.title }}">
+        <figcaption class="potfolio-item-wrap">
+          <h2 class="potfolio-item-title">{{ post.title }}</h2>
+        </figcaption>
+      </a>
+    </figure>
+
+    {% endfor %}
+  </div>
+
+</div><!-- / container -->
